--- a/CSS/style.css
+++ b/CSS/style.css
@@ -398,7 +398,7 @@ h3.my-profession {
 
 .about .about-content .education,
 .about .about-content .experience 
-.about .about-content .Skills
+.about .about-content .courses
 {
     flex: 0 0 50%;
     max-width: 50%;
